trunk/Archive2/b6/8f697bb29296d0/main.cpp
#include <cmath>

int main() {
    static_assert(std::pow(2, 2) < 5, "foobar");
    return 0;
}
